libs/extractor/tests/snapshots/snapshots/extractor__tests__remove_semicolon-5.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import { Box } from \"@devup-ui/core\";\n<Box bg={`${color}` + \";\"} />\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Dynamic(
            ExtractDynamicStyle {
                property: "background",
                level: 0,
                identifier: "`${color}`+``",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n<div className=\"a\" style={{ \"--b\": `${color}`+`` }} />;\n",
}
